# feelpp-book

./: .gitignore  CMakeLists.txt  GLOSSARY.adoc  GLOSSARY.md  GitHub.md  LANGS.adoc  Output_Directories.md  README.adoc  SUMMARY.adoc  SUMMARY.md  TAGS  book.adoc  book.json  book_intro.adoc  bookmd.adoc  consortium.adoc  credits.adoc  credits.md  doxygenmd.md  fluid_model.cpp  github.md  makefile.md  prerequisites.adoc  sponsors.adoc  time.adoc  ttttt
Annexes/: README.adoc  calculus.adoc
Applications/Mesh/: readme.adoc
Applications/Models/: readme.adoc
DeveloperReference/: CMake.adoc  README.adoc
EN/: SUMMARY.adoc
EN/00-preface/: conventions.adoc
EN/01-installation/: README.adoc  building.adoc  docker.adoc  linux.adoc  mac.adoc  prerequisites.adoc
EN/02-docker/: README.adoc  docker-version-linux.txt  feel--docker.adoc  feelpp-containers.adoc  feelpp-docker.adoc  installing-docker.adoc  what-is-docker-.adoc  what-is-docker.adoc
EN/03-modeling/: 01-modeling.adoc
EN/04-programming/: 08-ComputingIntegrals.adoc  11-SolveAnEquation.adoc  README.adoc
EN/07-quickref/: exporter.adoc
EN/09-annexes/: compiling-boost.adoc
FAQ/: FAQDevelopment.adoc  FAQDevelopment.md  FAQExecution.adoc  FAQExecution.md  README.adoc
GettingStarted/: README.adoc  README.md  Tools  building.adoc  building.md  compiling.adoc  compiling.md  docker.adoc  download.adoc  download.md  github.md  linux.adoc  linux.md  mac.adoc  mac.md  tools.md  using.adoc  using.md
GettingStarted/Tools/: doxygen.md
GettingStarted/prerequisites/: README.md  cmake.adoc  cmake.md  doxygen.adoc  doxygen.md  github.adoc  github.md  makefile.adoc  makefile.md  prerequisites.adoc
LearningByExample/: README.adoc
LearningByExample/Optimization/: README.adoc  laplacian_nlopt.adoc
QuickReference/: README.adoc  README.md  cmake.adoc  environment.adoc  environment.md  exporter.adoc  exporter.md  fileformats.adoc  forms.adoc  forms.md  integrals.adoc  integrals.md  keywords-algebra.adoc  keywords-geometry.adoc  keywords-operators.adoc  keywords.adoc  keywords.md  mesh.adoc  preconditioner.adoc  solver.adoc  solver.md  spaces.adoc  spaces.md
QuickReference/Integrals/: integrate.adoc  integrate.md  mean.adoc  mean.md  norms.adoc  norms.md  norms2.adoc  project.adoc  project.md
QuickReference/Keywords/: README.adoc
QuickReference/Mesh/: iterators.adoc  iterators.md
QuickReference/Models/: README.adoc  thrmoelectric.adoc
QuickReference/Solver/: backends.adoc  backends.md  eigensolver.adoc  solving.adoc  vector_matrix.md
QuickReference/Spaces/: functionspace.adoc  functionspace.md  interpolation.adoc  interpolation.md  notations.adoc  notations.md  save.adoc
QuickReference/Time/: README.adoc  (+5 more)
Tools/: README.md  doxygen.md  tools.md
Tutorial/: 01-OutputDirectories.adoc  01-OutputDirectories.md  01-SettingUpEnvironment.md  02-LoadingMesh.md  02-SettingUpEnvironment.adoc  02-SettingUpEnvironment.md  03-LoadingMesh.adoc  03-LoadingMesh.md  03-SpaceElements.md  03-UsingExpressions.md  04-EvaluatingFunctions.md  04-UsingExpressions.adoc  04-UsingExpressions.md  05-EvaluatingFunctions.adoc  05-EvaluatingFunctions.md  05-VisualizingFunctions.md  06-ComputingIntegrals.md  06-VisualizingFunctions.adoc  06-VisualizingFunctions.md  07-SpaceElements.adoc  07-SpaceElements.md  07-UsingBackend.md  08-ComputingIntegrals.adoc  08-ComputingIntegrals.md  08-Model.md  09-UsingBackend.adoc  09-UsingBackend.md  10-Model.adoc  10-Model.md  11-SolveAnEquation.adoc  Output_Directories.md  README.adoc  README.md
Tutorial/code/: 03-mymesh.cpp  CMakeLists.txt  model2.cpp
codes/: 04-myexpression.cpp  05-myexporter.cpp  myfunctor.cpp
codes/prerequisites/: CMakeLists.txt
en/: README.adoc  SUMMARY.adoc
styles/: website.css
(+71 files in other folders)
